--- a/project/res/sass.txsrc/layout.sass
+++ b/project/res/sass.txsrc/layout.sass
@@ -2,7 +2,7 @@
 @import "compass/css3/user-interface"
 @import "txsass/tx.mixins"
 @import "txsass/tx.mixins.debug"
-@import "txsass/tx.parameters"
+@import "txsass/tx.project"
 
 
 
@@ -72,52 +72,43 @@ body
 
 
 
-/* Large Resolutions Layout */
+/* High DPI Layout */
 
-@media only screen and (min-width: 1382px) 
-
-
-
-
-
-
-/* Print Layout */
-
-@media print 
-
-	body 
-		max-width: none
-		margin: 0 10px
-		padding: 0
+@media only screen and (min-resolution: 1.5dppx) and (max-width: 720px), only screen and (-webkit-min-device-pixel-ratio: 1.5) and (max-width: 720px), only screen and (min--moz-device-pixel-ratio: 1.5) and (max-width: 720px), only screen and (-o-min-device-pixel-ratio: 3/2) and (max-width: 720px), only screen and (min-device-pixel-ratio: 1.5) and (max-width: 720px)
 
 
 
 
 
 
-/* Phones Layout */
+/* Large Resolution Layout */
 
-@media handheld, only screen and (max-width: 640px) 
+@media only screen and (min-width: 1382px)
+
+
+
+
+
+
+/* Phone Layout */
+
+@media handheld, only screen and (max-width: 720px)
 
 	html 
 		-webkit-text-size-adjust: none
-	
-	body 
-		min-width: 0
-		max-width: none
+
+@media only screen and (min-resolution: 1.5dppx) and (max-width: 720px), only screen and (-webkit-min-device-pixel-ratio: 1.5) and (max-width: 720px), only screen and (min--moz-device-pixel-ratio: 1.5) and (max-width: 720px), only screen and (-o-min-device-pixel-ratio: 3/2) and (max-width: 720px), only screen and (min-device-pixel-ratio: 1.5) and (max-width: 720px)
 
 
 
 
 
 
-/* Tablets Layout */
+/* Tablet Layout */
 
-@media only screen and (min-width: 641px) and (max-width : 1024px) 
+@media only screen and (min-width: 721px) and (max-width : 1024px)
 
-	body 
-		min-width: 0
-		max-width: none
+@media only screen and (min-resolution: 1.5dppx) and (min-width: 721px) and (max-width : 1024px), only screen and (-webkit-min-device-pixel-ratio: 1.5) and (min-width: 721px) and (max-width : 1024px), only screen and (min--moz-device-pixel-ratio: 1.5) and (min-width: 721px) and (max-width : 1024px), only screen and (-o-min-device-pixel-ratio: 3/2) and (min-width: 721px) and (max-width : 1024px), only screen and (min-device-pixel-ratio: 1.5) and (min-width: 721px) and (max-width : 1024px)
 
 
 
@@ -126,7 +117,7 @@ body
 
 /* TV Layout */
 
-@media projection, tv 
+@media projection, tv
 
 
 
@@ -135,4 +126,4 @@ body
 
 /* Audio Layout */
 
-@media aural 
+@media aural
