--- a/project/res/css/styles.css
+++ b/project/res/css/styles.css
@@ -2,19 +2,18 @@
 html, body, div, span, h1, h2, h3, h4, h5, h6, p, address, blockquote, pre, a, abbr, acronym, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, form, fieldset, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, applet, object, iframe, article, aside, figure, figcaption, footer, header, hgroup, menu, nav, section, time, mark, audio, video, canvas {
   margin: 0;
   padding: 0;
+  border: none;
   background: none;
   font-family: inherit;
   font-weight: inherit;
   font-style: inherit;
   line-height: inherit;
   vertical-align: baseline;
-  border: none;
   outline: none; }
 
 html {
   overflow: auto;
-  -webkit-overflow-scrolling: touch;
-  -webkit-tap-highlight-color: #f3f5f6; }
+  -webkit-overflow-scrolling: touch; }
 
 blockquote, q {
   quotes: none; }
@@ -42,16 +41,20 @@ input, button, select, textarea {
   padding: 0; }
 
 /* Lists Styles Reset */
-.lstRst, .lstRst > li, .dfLstRst, .dfLstRst > dt, .dfLstRst > dd {
+.u-listReset, .u-descriptionListReset {
   margin: 0;
   padding: 0; }
 
-.lstRst {
+.u-listReset {
   list-style: none outside; }
-  .lstRst > li {
+  .u-listReset > li {
+    margin: 0;
+    padding: 0;
     background: none; }
 
-.dfLstRst > dt, .dfLstRst > dd {
+.u-descriptionListReset > dt, .u-descriptionListReset > dd {
+  margin: 0;
+  padding: 0;
   font-weight: normal;
   font-style: normal; }
 
@@ -64,24 +67,21 @@ html {
   line-height: 1.5em; }
 
 body {
+  counter-reset: heading;
   color: black;
-  font-family: "Helvetica Neue", Helvetica, Calibri, Arial, sans-serif;
-  counter-reset: heading; }
+  font-family: "Helvetica Neue", Helvetica, Calibri, Arial, sans-serif; }
 
 ::-webkit-selection {
   color: white;
-  background: blue;
-  text-shadow: none; }
+  background: blue; }
 
 ::-moz-selection {
   color: white;
-  background: blue;
-  text-shadow: none; }
+  background: blue; }
 
 ::selection {
   color: white;
-  background: blue;
-  text-shadow: none; }
+  background: blue; }
 
 a:focus, select:focus {
   outline: 1px dotted #939393; }
@@ -112,34 +112,34 @@ h1, h2, h3, h4, h5, h6 {
   text-rendering: optimizelegibility; }
 
 h1 {
+  margin: 0.75em 0 1.5em;
   font-size: 2em;
-  line-height: 1.5em;
-  margin: 0.75em 0 1.5em; }
+  line-height: 1.5em; }
 
 h2 {
+  margin: 1em 0;
   font-size: 1.5em;
-  line-height: 2em;
-  margin: 1em 0; }
+  line-height: 2em; }
 
 h3 {
+  margin: 1.09091em 0;
   font-size: 1.375em;
-  line-height: 1.09091em;
-  margin: 1.09091em 0; }
+  line-height: 1.09091em; }
 
 h4 {
+  margin: 1.2em 0;
   font-size: 1.25em;
-  line-height: 1.2em;
-  margin: 1.2em 0; }
+  line-height: 1.2em; }
 
 h5 {
+  margin: 1.33333em 0;
   font-size: 1.125em;
-  line-height: 1.33333em;
-  margin: 1.33333em 0; }
+  line-height: 1.33333em; }
 
 h6 {
+  margin: 1.5em 0;
   font-size: 1em;
-  line-height: 1.5em;
-  margin: 1.5em 0; }
+  line-height: 1.5em; }
 
 p, pre, dl, ul, ol, li, address, video, table {
   margin: 1.5em 0; }
@@ -156,6 +156,7 @@ pre, code, samp, del {
   color: #686868; }
 
 pre {
+  overflow: hidden;
   padding: 0 1.5em;
   white-space: pre;
   white-space: pre-wrap;
@@ -164,16 +165,7 @@ pre {
   white-space: -o-pre-wrap;
   white-space: -moz-pre-wrap;
   white-space: -hp-pre-wrap;
-  word-wrap: break-word;
-  overflow: hidden; }
-
-p var, p code, p samp {
-  position: relative;
-  top: 0.09em;
-  vertical-align: top; }
-
-code var, samp var {
-  top: 0; }
+  word-wrap: break-word; }
 
 blockquote, em, cite, q, i {
   font-style: italic; }
@@ -206,25 +198,23 @@ strong, dfn, b, kbd, acronym, abbr, var {
   font-weight: bold; }
 
 acronym, abbr, ins, mark, del {
-  color: #488dc6;
   border-width: 0 0 1px;
   border-style: dotted;
   border-color: #488dc6;
-  cursor: help;
-  text-decoration: none; }
+  color: #488dc6;
+  text-decoration: none;
+  cursor: help; }
 
 acronym, abbr {
   margin: 0 -0.075em 0 0;
   letter-spacing: 0.075em; }
 
 kbd {
-  padding: 0.25em 0.5em 0.2em;
-  color: #333333;
-  background: #ededed;
-  font: caption;
-  font-size: 1em;
-  font-weight: bold;
-  letter-spacing: 0.1em;
+  display: -moz-inline-box;
+  display: inline-block;
+  height: 24px;
+  line-height: 24px;
+  padding: 0 0.5em;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
@@ -235,7 +225,13 @@ kbd {
   background-clip: padding-box;
   -webkit-box-shadow: -2px -2px 2px #dadada inset;
   -moz-box-shadow: -2px -2px 2px #dadada inset;
-  box-shadow: -2px -2px 2px #dadada inset; }
+  box-shadow: -2px -2px 2px #dadada inset;
+  color: #333333;
+  background: #ededed;
+  font-family: "Courier New", Courier, Freemono, "Nimbus Mono L", monospace;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  vertical-align: top; }
 
 var {
   color: #d00837;
@@ -275,8 +271,7 @@ caption {
   font-weight: bold; }
 
 table {
-  width: 100%;
-  max-width: 100%; }
+  width: 100%; }
 
 td, th {
   border: 1px solid black;
@@ -320,14 +315,14 @@ input, select {
   vertical-align: top; }
 
 input[type="radio"], input[type="checkbox"] {
-  vertical-align: top;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  vertical-align: top; }
 input[type="file"] {
   height: auto;
-  line-height: normal;
-  border: none; }
+  border: none;
+  line-height: normal; }
 
 select {
   height: 1.5em;
@@ -448,11 +443,11 @@ hr {
 
 /* Headings Counter */
 .hNumber:before {
+  position: relative;
   display: -moz-inline-box;
   display: inline-block;
-  counter-increment: heading;
   content: counter(heading) ". ";
-  position: relative; }
+  counter-increment: heading; }
 
 /* High DPI Typographics */
 @media only screen and (min-resolution: 1.5dppx), only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min-device-pixel-ratio: 1.5) {
@@ -460,6 +455,9 @@ hr {
     text-rendering: optimizelegibility; } }
 /* Phone Typographics */
 @media handheld, only screen and (max-width: 720px) {
+  html {
+    -webkit-text-size-adjust: none; }
+
   table {
     display: block; }
 
@@ -468,6 +466,29 @@ hr {
 
   tr, th, td {
     display: block; } }
+/* Tablet Typographics */
+/* Print Typographics */
+@media print {
+  @page {
+    margin: 0; }
+
+  a, acronym, abbr, ins, del, var, input, select, textarea {
+    border: none;
+    color: black;
+    text-decoration: none;
+    outline: none; }
+
+  h1, h2, h3, h4, h5, h6 {
+    page-break-after: avoid;
+    orphans: 3;
+    widows: 3; }
+
+  p {
+    orphans: 3;
+    widows: 3; }
+
+  blockquote, pre, img {
+    page-break-inside: avoid; } }
 
 /* Layout */
 html {
@@ -489,40 +510,40 @@ body {
   left: 0;
   right: 0; }
 
-.screenTransition .screen {
+.s-screenTransition .screen {
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
   -o-transition: all 0.5s;
   transition: all 0.5s; }
 
-.newScreen {
+.screen-newScreen {
   -webkit-transform: translate(100%, 0);
   -moz-transform: translate(100%, 0);
   -ms-transform: translate(100%, 0);
   -o-transform: translate(100%, 0);
   transform: translate(100%, 0); }
 
-.reverseTransition .newScreen {
+.s-reverseTransition .screen-newScreen {
   -webkit-transform: translate(-100%, 0);
   -moz-transform: translate(-100%, 0);
   -ms-transform: translate(-100%, 0);
   -o-transform: translate(-100%, 0);
   transform: translate(-100%, 0); }
 
-.screenTransition .oldScreen {
+.s-screenTransition .screen-oldScreen {
   -webkit-transform: translate(-100%, 0);
   -moz-transform: translate(-100%, 0);
   -ms-transform: translate(-100%, 0);
   -o-transform: translate(-100%, 0);
   transform: translate(-100%, 0); }
-.screenTransition.reverseTransition .oldScreen {
+.s-screenTransition.s-reverseTransition .screen-oldScreen {
   -webkit-transform: translate(100%, 0);
   -moz-transform: translate(100%, 0);
   -ms-transform: translate(100%, 0);
   -o-transform: translate(100%, 0);
   transform: translate(100%, 0); }
 
-.screenTransition .newScreen {
+.s-screenTransition .screen-newScreen {
   -webkit-transform: translate(0, 0);
   -moz-transform: translate(0, 0);
   -ms-transform: translate(0, 0);
@@ -536,10 +557,16 @@ body {
 /* High DPI Layout */
 /* Large Resolution Layout */
 /* Phone Layout */
-@media handheld, only screen and (max-width: 720px) {
-  html {
-    -webkit-text-size-adjust: none; } }
 /* Tablet Layout */
+/* Print Layout */
+@media print {
+  body {
+    max-width: none;
+    margin: 0 10px;
+    padding: 0; }
+
+  .header, .footer {
+    display: none; } }
 /* TV Layout */
 /* Audio Layout */
 
