--- a/project/res/css.dev/typographics.css
+++ b/project/res/css.dev/typographics.css
@@ -289,7 +289,7 @@ textarea {
   height: 14.875em; }
 
 @-o-keyframes focusPulse {
-  From {
+  0% {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset, 0 0 4px 1px #8ac7ff; }
 
   50% {
@@ -299,7 +299,7 @@ textarea {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset, 0 0 4px 1px #8ac7ff; } }
 
 @-moz-keyframes focusPulse {
-  From {
+  0% {
     -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset, 0 0 4px 1px #8ac7ff;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset, 0 0 4px 1px #8ac7ff; }
 
@@ -312,7 +312,7 @@ textarea {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset, 0 0 4px 1px #8ac7ff; } }
 
 @-webkit-keyframes focusPulse {
-  From {
+  0% {
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset, 0 0 4px 1px #8ac7ff;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset, 0 0 4px 1px #8ac7ff; }
 
@@ -325,7 +325,7 @@ textarea {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset, 0 0 4px 1px #8ac7ff; } }
 
 @keyframes focusPulse {
-  From {
+  0% {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset, 0 0 4px 1px #8ac7ff; }
 
   50% {
