--- a/project/res/sass.dev/layout.sass
+++ b/project/res/sass.dev/layout.sass
@@ -1,8 +1,8 @@
 @import "compass"
 @import "compass/css3/user-interface"
-@import "txsass/tx.mixins"
-@import "txsass/tx.mixins.debug"
-@import "txsass/tx.project"
+@import "tx/tx.mixins"
+@import "tx/tx.mixins.debug"
+@import "tx/tx.project"
 
 
 
