--- a/project/res/css.dev/txdebug.debugtools.css
+++ b/project/res/css.dev/txdebug.debugtools.css
@@ -111,4 +111,4 @@
   background: white;
   opacity: 1; }
 
-/*@ sourceMappingURL=tx.debugtools.css.map */
+/*@ sourceMappingURL=txdebug.debugtools.css.map */
