--- a/project/res/css/styles.css
+++ b/project/res/css/styles.css
@@ -653,6 +653,11 @@ hr {
   font-style: normal;
 }
 
+/* Image Blocker */
+.u-imageBlocker {
+  background-image: none !important;
+}
+
 /* Visually Hidden */
 .u-visuallyHidden {
   position: absolute;
