--- a/project/res/css/styles.css
+++ b/project/res/css/styles.css
@@ -54,12 +54,8 @@ button, select {
 
 
 /* Base Typography & Rhythm */
-* html {
-  font-size: 100%;
-}
-
 html {
-  font-size: 16px;
+  font-size: 100%;
   line-height: 1.5em;
 }
 
@@ -172,8 +168,9 @@ p, pre, dl, ul, ol, li, address, video, table {
 }
 
 p, blockquote, li, dd {
-  -webkit-hyphens: auto;
   -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  -webkit-hyphens: auto;
   hyphens: auto;
 }
 
@@ -257,16 +254,15 @@ kbd {
   height: 24px;
   line-height: 24px;
   padding: 0 0.5em;
-  -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
+  -webkit-border-radius: 3px;
   border-radius: 3px;
-  -webkit-background-clip: padding;
   -moz-background-clip: padding;
+  -o-background-clip: padding-box;
+  -webkit-background-clip: padding;
   background-clip: padding-box;
-  -webkit-box-shadow: -2px -2px 2px #dadada inset;
   -moz-box-shadow: -2px -2px 2px #dadada inset;
+  -webkit-box-shadow: -2px -2px 2px #dadada inset;
   box-shadow: -2px -2px 2px #dadada inset;
   color: #333333;
   background: #ededed;
@@ -387,8 +383,8 @@ input, select {
 }
 
 input[type="radio"], input[type="checkbox"] {
-  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   vertical-align: top;
 }
@@ -399,8 +395,8 @@ input[type="file"] {
 }
 input[type="search"] {
   -webkit-appearance: textfield;
-  -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
 input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
@@ -417,8 +413,8 @@ select[multiple="multiple"] {
 
 .field, textarea {
   border: 1px solid #9a9a9a;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset;
   -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset;
 }
 .field:focus, textarea:focus {
@@ -451,7 +447,6 @@ textarea {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset, 0 0 4px 1px #8ac7ff;
   }
 }
-
 @-moz-keyframes focusPulse {
   0% {
     -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset, 0 0 4px 1px #8ac7ff;
@@ -468,7 +463,6 @@ textarea {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset, 0 0 4px 1px #8ac7ff;
   }
 }
-
 @-webkit-keyframes focusPulse {
   0% {
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset, 0 0 4px 1px #8ac7ff;
@@ -485,7 +479,6 @@ textarea {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset, 0 0 4px 1px #8ac7ff;
   }
 }
-
 @keyframes focusPulse {
   0% {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset, 0 0 4px 1px #8ac7ff;
@@ -499,7 +492,6 @@ textarea {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25) inset, 0 0 4px 1px #8ac7ff;
   }
 }
-
 hr {
   display: block;
   height: 1px;
@@ -508,8 +500,8 @@ hr {
   border-width: 1px 0;
   border-style: solid;
   border-color: #c7ced6 black white;
-  -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
 
@@ -589,8 +581,7 @@ hr {
 @media print {
   @page {
     margin: 0 0.5cm;
-}
-
+  }
   a, acronym, abbr, ins, del, var, input, select, textarea {
     border: none;
     color: black;
@@ -629,7 +620,7 @@ hr {
   }
 }
 
-
+/*# sourceMappingURL=typography.css.map */
 /* Utilities */
 /* Lists Reset */
 .u-listReset, .u-descriptionListReset {
@@ -697,48 +688,48 @@ body {
 }
 
 .is-screenTransition .screen {
-  -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
   -o-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
 
 .screen-newScreen {
-  -webkit-transform: translate(100%, 0);
   -moz-transform: translate(100%, 0);
   -ms-transform: translate(100%, 0);
   -o-transform: translate(100%, 0);
+  -webkit-transform: translate(100%, 0);
   transform: translate(100%, 0);
 }
 
 .is-reverseTransition .screen-newScreen {
-  -webkit-transform: translate(-100%, 0);
   -moz-transform: translate(-100%, 0);
   -ms-transform: translate(-100%, 0);
   -o-transform: translate(-100%, 0);
+  -webkit-transform: translate(-100%, 0);
   transform: translate(-100%, 0);
 }
 
 .is-screenTransition .screen-oldScreen {
-  -webkit-transform: translate(-100%, 0);
   -moz-transform: translate(-100%, 0);
   -ms-transform: translate(-100%, 0);
   -o-transform: translate(-100%, 0);
+  -webkit-transform: translate(-100%, 0);
   transform: translate(-100%, 0);
 }
 .is-screenTransition.is-reverseTransition .screen-oldScreen {
-  -webkit-transform: translate(100%, 0);
   -moz-transform: translate(100%, 0);
   -ms-transform: translate(100%, 0);
   -o-transform: translate(100%, 0);
+  -webkit-transform: translate(100%, 0);
   transform: translate(100%, 0);
 }
 
 .is-screenTransition .screen-newScreen {
-  -webkit-transform: translate(0, 0);
   -moz-transform: translate(0, 0);
   -ms-transform: translate(0, 0);
   -o-transform: translate(0, 0);
+  -webkit-transform: translate(0, 0);
   transform: translate(0, 0);
 }
 
@@ -768,6 +759,7 @@ body {
 /* TV Layout */
 /* Audio Layout */
 
-
+/*# sourceMappingURL=layout.css.map */
 /* UI */
 
+/*# sourceMappingURL=ui.css.map */
