--- a/dev/templates/index.tmp.html
+++ b/dev/templates/index.tmp.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-
-<html class="no-js" lang="@tx-language">
+<!-- @tx-process:include _doctype.html --><!-- /@tx-process -->
 
 <!-- @tx-process:include _head.html --><!-- /@tx-process -->
 
 	<body>
-		<script type="text/template" id="start" class="template"></script>
+<!-- @tx-process:include _appTemplate-start.html --><!-- /@tx-process -->
 <!-- @tx-process:include _scripts.html --><!-- /@tx-process -->
 	</body>
 
