--- a/dev/templates/app.tmp.html
+++ b/dev/templates/app.tmp.html
@@ -3,6 +3,7 @@
 <!-- @tx-process:include _head.html --><!-- /@tx-process -->
 
 	<body>
+<!-- @tx-process:include _appTemplate-start.html --><!-- /@tx-process -->
 <!-- @tx-process:include _scripts.html --><!-- /@tx-process -->
 	</body>
 
