--- a/dev/templates/app.tmp.html
+++ b/dev/templates/app.tmp.html
@@ -1,10 +1,8 @@
-<!-- @tx-process:include _doctype.html --><!-- /@tx-process -->
-
 <!-- @tx-process:include _head.html --><!-- /@tx-process -->
 
 	<body>
 <!-- @tx-process:include _appTemplate-start.html --><!-- /@tx-process -->
-<!-- @tx-process:include _scripts.html --><!-- /@tx-process -->
+<!-- @tx-process:include _scriptApp.html --><!-- /@tx-process -->
 	</body>
 
 </html>
