--- a/dev/templates/_head.html
+++ b/dev/templates/_head.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+
+<html class="no-js" lang="@tx-language">
+
 	<head>
 		<title>@tx-title</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -10,11 +14,10 @@
 		<meta name="google-site-verification" content="">
 		<meta name="HandheldFriendly" content="True">
 		<meta name="MobileOptimized" content="320">
-		<meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1, minimum-scale=1">
+		<meta name="viewport" content="width=device-width, height=device-height, user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta http-equiv="cleartype" content="on">
-		<script type="text/javascript" src="res/js/Modernizr/modernizr.min.js"></script>
 		<!-- @tx-css -->
 		<link rel="stylesheet" type="text/css" href="res/css-dev/reset.css">
 		<link rel="stylesheet" type="text/css" href="res/css-dev/utilities.css">
@@ -23,6 +26,7 @@
 		<link rel="stylesheet" type="text/css" href="res/css-dev/ui.css">
 		<link rel="stylesheet" type="text/css" href="res/css-dev/tx/tx-debug.css">
 		<!-- /@tx-css -->
+		<script type="text/javascript" src="res/js/Modernizr/modernizr.min.js"></script>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<link rel="apple-touch-icon" type="image/png" sizes="114x114" href="apple-touch-icon-114x114.png">
 		<link rel="apple-touch-icon" type="image/png" sizes="120x120" href="apple-touch-icon-120x120.png">
@@ -38,8 +42,10 @@
 		<link rel="apple-touch-startup-image" media="(device-width: 1536px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)" type="image/jpeg" href="apple-touch-startup-image-1536x2048.jpg">
 		<link rel="apple-touch-startup-image" media="(device-width: 1536px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2)" type="image/jpeg" href="apple-touch-startup-image-2048x1536.jpg">
 		<meta name="msapplication-TileColor" content="#3c3b3c">
-		<meta name="msapplication-TileImage" content="icon-msTileIcon.png">
-		<link rel="icon" type="image/png" href="195x195image.png">
-		<link rel="icon" type="image/png" href="googleTV.png">
-		<link rel="image_src" href="socialImage.jpg">
+		<meta name="msapplication-TileImage" content="msTileIcon.png">
+		<link rel="icon" type="image/png" sizes="195x195" href="operaSpeedDial.png">
+		<link rel="icon" type="image/png" sizes="228x288" href="operaCoast.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="googleTV.png">
+		<link rel="icon" type="image/png" sizes="128x128" href="chromeWebStore.png">
+		<link rel="image_src" href="thumbnail.jpg">
 	</head>
