--- a/dev/res/sass-dev/typography.scss
+++ b/dev/res/sass-dev/typography.scss
@@ -284,6 +284,9 @@ input[type="reset"], input[type="submit"], button {
 	width: auto;
 	overflow: visible;
 	cursor: pointer;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
 }
 
 input, select, textarea {
@@ -314,11 +317,15 @@ input {
 	}
 
 	&[type="search"] {
+		-moz-appearance: textfield;
 		-webkit-appearance: textfield;
+		appearance: textfield;
 		box-sizing: content-box;
 
 		&::-webkit-search-cancel-button, &::-webkit-search-decoration {
+			-moz-appearance: none;
 			-webkit-appearance: none;
+			appearance: none;
 		}
 
 	}
