--- a/dev/res/css/critical.css
+++ b/dev/res/css/critical.css
@@ -10,6 +10,8 @@ html, body {
 	vertical-align: baseline;
 }
 
+
+
 html {
 	-webkit-overflow-scrolling: touch;
 }
@@ -24,6 +26,8 @@ html {
 	-ms-text-size-adjust: 100%;
 }
 
+
+
 body {
 	counter-reset: heading;
 	color: #000000;
@@ -31,10 +35,21 @@ body {
 	font-family: "Helvetica Neue", Helvetica, Calibri, Arial, sans-serif;
 }
 
+
+
 ::-webkit-selection {
 	color: white;
 	background: blue;
 }
+
+
+
+::-moz-selection {
+	color: white;
+	background: blue;
+}
+
+
 
 ::-moz-selection {
 	color: white;
@@ -49,14 +64,20 @@ body {
 
 
 @media only screen and (min-resolution: 1.25dppx), only screen and (-webkit-min-device-pixel-ratio: 1.25), only screen and (min--moz-device-pixel-ratio: 1.25), only screen and (-o-min-device-pixel-ratio: 5/4), only screen and (min-device-pixel-ratio: 1.25), only screen and (min-resolution: 120dpi) {
+	
+
 	html {
 		text-rendering: optimizelegibility;
 	}
 }
 
+
+
 html {
 	min-height: 100%;
 }
+
+
 
 body {
 	position: relative;
