--- a/dev/res/css-dev/typography.css
+++ b/dev/res/css-dev/typography.css
@@ -1,3 +1,4 @@
+/* line 11, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 html {
 	font-size: 100%;
 	line-height: 1.5em;
@@ -6,6 +7,7 @@ html {
 	-ms-text-size-adjust: 100%;
 }
 
+/* line 16, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 body {
 	counter-reset: heading;
 	color: #000000;
@@ -13,99 +15,123 @@ body {
 	font-family: "Helvetica Neue", Helvetica, Calibri, Arial, sans-serif;
 }
 
+/* line 25, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/tx/tx */
 ::-webkit-selection {
 	color: white;
 	background: blue;
 }
 
+/* line 25, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/tx/tx */
 ::-moz-selection {
 	color: white;
 	background: blue;
 }
 
+/* line 25, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/tx/tx */
+::-moz-selection {
+	color: white;
+	background: blue;
+}
 ::selection {
 	color: white;
 	background: blue;
 }
 
+/* line 25, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 a {
 	color: #003b9e;
 	text-decoration: underline;
 }
+/* line 29, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 a:visited {
 	color: #000000;
 }
+/* line 33, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 a:hover {
 	color: #ff0000;
 }
+/* line 37, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 a:active {
 	color: #ff0000;
 }
+/* line 41, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 a:focus {
 	color: #000000;
 	outline: 1px dotted #939393;
 }
 
+/* line 48, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 label, button, .button {
 	cursor: pointer;
 }
 
+/* line 52, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 label {
 	border-width: 0 0 1px;
 	border-style: dotted;
 	border-color: #939393;
 }
+/* line 57, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 label:focus {
 	border: none;
 	outline: 1px dotted #939393;
 }
 
+/* line 64, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 h1, h2, h3, h4, h5, h6 {
 	font-weight: bold;
 
 	text-rendering: optimizelegibility;
 }
 
+/* line 69, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 h1 {
 	margin: .75em 0 1.5em;
 	font-size: 2em;
 	line-height: 1.5em;
 }
 
+/* line 74, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 h2 {
 	margin: 1em 0;
 	font-size: 1.5em;
 	line-height: 2em;
 }
 
+/* line 79, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 h3 {
 	margin: 1.09091em 0;
 	font-size: 1.375em;
 	line-height: 1.09091em;
 }
 
+/* line 84, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 h4 {
 	margin: 1.2em 0;
 	font-size: 1.25em;
 	line-height: 1.2em;
 }
 
+/* line 89, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 h5 {
 	margin: 1.33333em 0;
 	font-size: 1.125em;
 	line-height: 1.33333em;
 }
 
+/* line 94, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 h6 {
 	margin: 1.5em 0;
 	font-size: 1em;
 	line-height: 1.5em;
 }
 
+/* line 99, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 p, pre, dl, ul, ol, li, address, video, table {
 	margin: 1.5em 0;
 }
 
+/* line 103, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 p, blockquote, li, dd {
 	-webkit-hyphens: auto;
 	-moz-hyphens: auto;
@@ -114,14 +140,17 @@ p, blockquote, li, dd {
 	hyphens: auto;
 }
 
+/* line 107, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 pre, code, samp, var, tt {
 	font-family: "Courier New", Courier, Freemono, "Nimbus Mono L", monospace;
 }
 
+/* line 111, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 pre, code, samp, del {
 	color: #686868;
 }
 
+/* line 115, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 pre {
 	overflow: hidden; 
 	padding: 0 1.5em;
@@ -135,45 +164,55 @@ pre {
 	word-wrap: break-word;
 }
 
+/* line 121, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 blockquote, em, cite, q, i {
 	font-style: italic;
 }
 
+/* line 125, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 blockquote {
 	margin: 1.5em 3em;
 	font-family: Cambria, Georgia, Times, "Times New Roman", serif;
 }
 
+/* line 130, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 address {
 	font-style: normal;
 }
 
+/* line 134, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 dt {
 	margin: 1.5em 0 0;
 	font-weight: bold;
 }
 
+/* line 139, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 dd {
 	margin: 0 0 1.5em 1.5em;
 	font-style: italic;
 }
 
+/* line 144, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 ul {
 	list-style-type: disc;
 }
 
+/* line 148, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 ol {
 	list-style-type: decimal;
 }
 
+/* line 154, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 li ul, li ol {
 	margin: 1.5em 0 1.5em 1.5em;
 }
 
+/* line 160, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 strong, dfn, b, kbd, acronym, abbr, var {
 	font-weight: bold;
 }
 
+/* line 164, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 acronym, abbr, ins, mark, del {
 	border-width: 0 0 1px;
 	border-style: dotted;
@@ -183,11 +222,13 @@ acronym, abbr, ins, mark, del {
 	cursor: help;
 }
 
+/* line 173, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 acronym, abbr {
 	margin: 0 -.075em 0 0;
 	letter-spacing: .075em;
 }
 
+/* line 178, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 kbd {
 	display: inline-block;
 	height: 24px;
@@ -204,71 +245,86 @@ kbd {
 	vertical-align: top;
 }
 
+/* line 193, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 var {
 	color: #d00837;
 	font-style: normal;
 }
 
+/* line 198, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 del, strike, s {
 	text-decoration: line-through;
 }
 
+/* line 202, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 sup, sub {
 	position: relative;
 	font-size: .75em;
 	line-height: 0;
 }
 
+/* line 207, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 sup {
 	top: -.65em;
 }
 
+/* line 211, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 sub {
 	bottom: -.25em;
 }
 
+/* line 215, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 big {
 	font-size: 1.5em;
 	line-height: 0;
 }
 
+/* line 219, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 small {
 	font-size: .75em;
 	line-height: 0;
 }
 
+/* line 223, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 u {
 	text-decoration: underline;
 }
 
+/* line 227, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 img {
 	max-width: 100%;
 	vertical-align: top;
 }
 
+/* line 232, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 caption {
 	padding: 0 0 .75em;
 	font-weight: bold;
 }
 
+/* line 237, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 table {
 	width: 100%;
 	table-layout: fixed;
 }
 
+/* line 242, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 td, th {
 	padding: .6875em .5em .75em; 
 	border: 1px solid black;
 }
 
+/* line 246, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 th {
 	font-weight: bold;
 }
 
+/* line 250, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 fieldset {
 	padding: .75em 0 0;
 }
 
+/* line 254, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 legend {
 	position: relative;
 	left: -1.5em;
@@ -278,25 +334,30 @@ legend {
 	font-weight: bold;
 }
 
+/* line 263, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 input, select, button, textarea {
 	font-size: 1em;
 	font-family: "Helvetica Neue", Helvetica, Calibri, Arial, sans-serif;
 	line-height: 1.5em;
 }
 
+/* line 268, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 input, button, textarea {
 	padding: 0 .5em;
 }
 
+/* line 272, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 input, button {
 	height: 1.5em;
 	border: none;
 }
+/* line 276, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 input::-moz-focus-inner, button::-moz-focus-inner {
 	padding: 0; 
 	border: 0;
 }
 
+/* line 283, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 input[type="reset"], input[type="submit"], button {
 	overflow: visible;
 	width: auto;
@@ -306,95 +367,115 @@ input[type="reset"], input[type="submit"], button {
 	appearance: none;
 }
 
+/* line 294, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 input[disabled], input[readonly], select[disabled], select[readonly], textarea[disabled], textarea[readonly] {
 	opacity: .5;
 	cursor: default;
 	cursor: not-allowed;
 }
 
+/* line 302, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 input, select {
 	vertical-align: top;
 }
 
+/* line 308, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 input[type="radio"], input[type="checkbox"] {
 	box-sizing: border-box;
 	vertical-align: top;
 }
+/* line 313, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 input[type="file"] {
 	height: auto;
 	border: none;
 	line-height: normal;
 }
+/* line 319, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 input[type="search"] {
 	box-sizing: content-box; 
 	-webkit-appearance: textfield;
 	-moz-appearance: textfield;
 	appearance: textfield;
 }
+/* line 325, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;
 }
 
+/* line 335, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 select {
 	height: 1.5em;
 	border: 1px solid #9a9a9a;
 }
+/* line 339, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 select:focus {
 	outline: 1px dotted #939393;
 }
+/* line 343, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 select[multiple] {
 	height: 7.525em;
 }
 
+/* line 349, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 .field, textarea {
 	border: 1px solid #9a9a9a;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, .25) inset;
 }
+/* line 353, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 .field:focus, textarea:focus {
 	outline: none;
 	-webkit-animation: focusPulse 1.5s infinite;
 	animation: focusPulse 1.5s infinite;
 }
 
+/* line 360, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 .field {
 	height: 1.375em;
 }
 
+/* line 364, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 textarea {
 	overflow: auto; 
 	height: 14.875em;
 }
 
 @-webkit-keyframes focusPulse {
+	/* line 370, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 	0% {
 		box-shadow: 0 1px 2px rgba(0, 0, 0, .25) inset, 0 0 4px 1px #8ac7ff;
 	}
 
+	/* line 373, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 	50% {
 		box-shadow: 0 1px 2px rgba(0, 0, 0, .25) inset, 0 0 8px 1px #8ac7ff;
 	}
 
+	/* line 376, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 	100% {
 		box-shadow: 0 1px 2px rgba(0, 0, 0, .25) inset, 0 0 4px 1px #8ac7ff;
 	}
 }
 
 @keyframes focusPulse {
+	/* line 370, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 	0% {
 		box-shadow: 0 1px 2px rgba(0, 0, 0, .25) inset, 0 0 4px 1px #8ac7ff;
 	}
 
+	/* line 373, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 	50% {
 		box-shadow: 0 1px 2px rgba(0, 0, 0, .25) inset, 0 0 8px 1px #8ac7ff;
 	}
 
+	/* line 376, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 	100% {
 		box-shadow: 0 1px 2px rgba(0, 0, 0, .25) inset, 0 0 4px 1px #8ac7ff;
 	}
 }
 
+/* line 381, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 hr {
 	display: block;
 	box-sizing: content-box; 
@@ -407,56 +488,69 @@ hr {
 }
 
 /* Additional Decorative Styles */
+/* line 5, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/tx/tx-typographyAdd */
 .alnLft {
 	text-align: left;
 }
 
+/* line 9, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/tx/tx-typographyAdd */
 .alnRgt {
 	text-align: right;
 }
 
+/* line 13, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/tx/tx-typographyAdd */
 .alnCnt {
 	text-align: center;
 }
 
+/* line 17, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/tx/tx-typographyAdd */
 .alnJst {
 	text-align: justify;
 }
 
+/* line 21, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/tx/tx-typographyAdd */
 .alnTop {
 	vertical-align: top;
 }
 
+/* line 25, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/tx/tx-typographyAdd */
 .alnMdl {
 	vertical-align: middle;
 }
 
+/* line 29, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/tx/tx-typographyAdd */
 .alnBtm {
 	vertical-align: bottom;
 }
 
+/* line 33, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/tx/tx-typographyAdd */
 .fntBld {
 	font-weight: bold;
 }
 
+/* line 37, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/tx/tx-typographyAdd */
 .fntItl {
 	font-style: italic;
 }
 
+/* line 41, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/tx/tx-typographyAdd */
 .fntNrm {
 	font-weight: normal;
 	font-style: normal;
 }
 
+/* line 46, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/tx/tx-typographyAdd */
 .blkClr {
 	clear: both;
 }
 
+/* line 50, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/tx/tx-typographyAdd */
 .blkNClr {
 	clear: none;
 }
 
 /* Headings Counter */
+/* line 60, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/tx/tx-typographyAdd */
 .hNumber:before {
 	position: relative;
 	content: counter(heading) ". ";
@@ -466,6 +560,7 @@ hr {
 
 /* High DPI Typography */
 @media only screen and (min-resolution: 1.25dppx), only screen and (-webkit-min-device-pixel-ratio: 1.25), only screen and (min--moz-device-pixel-ratio: 1.25), only screen and (-o-min-device-pixel-ratio: 5/4), only screen and (min-device-pixel-ratio: 1.25), only screen and (min-resolution: 120dpi) {
+	/* line 400, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 	html {
 		text-rendering: optimizelegibility;
 	}
@@ -473,11 +568,11 @@ hr {
 
 /* Phone Typography */
 @media handheld, only screen and (max-width: 720px) {
+	/* line 412, /Users/uncleFucka/Projects/AppX/dev/res/sass-dev/typography.scss */
 	table, tr, th, td {
 		display: block;
 	}
 }
 
 /* Tablet Typography */
-
 /*# sourceMappingURL=typography.css.map */
